--- a/index.html
+++ b/index.html
@@ -139,24 +139,31 @@
         </div>
 
         <div class="row content">
+          <div class="col-lg-12 pb-4 text-center">
+            Welcome to Vega-Group, where we specialize in providing top-quality new and used computer hardware and accessories. We understand the importance of staying up-to-date with the latest technology, which is why we offer a wide range of products to suit all your needs. Our inventory includes everything from basic desktop computers to high-end gaming rigs and everything in between.
+          </div>
           <div class="col-lg-6">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> 
+                In addition to our hardware offerings, we also provide professional installation services for security systems and smart home setups. Our team of experts has been helping businesses and homeowners secure their properties since our company was founded in 2009.
+              </li>
+              <li><i class="ri-check-double-line"></i> 
+                We understand the importance of budget when it comes to purchasing new technology. That's why we also offer flexible financing options, allowing you to get the products and services you need without breaking the bank.
+              </li>
             </ul>
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="ri-check-double-line"></i> 
+                At Vega-Group, customer satisfaction is our top priority. We pride ourselves on providing fast, friendly service and expert advice. Whether you're a small business owner, a home user, or a hardcore gamer, we have the products and expertise to meet your needs.
+              </li>
+              <li><i class="ri-check-double-line"></i> 
+                Thank you for considering us for all your computer hardware and security needs. Browse our website or contact us today to learn more about our products and services.
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 text-center">
+            <a href="assets/previous-work.docx" class="btn-learn-more" download>Previous Work Document <i class="ri-download-2-line"></i></a>
           </div>
         </div>
 
