--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Team Section ======= -->
-    <!-- <section id="team" class="team section-bg">
+    <section id="team" class="team section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -517,7 +517,7 @@
         </div>
 
       </div>
-    </section> -->
+    </section>
     <!-- End Team Section -->
 
     <!-- ======= Pricing Section ======= -->
@@ -661,22 +661,24 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Ahmed Tayser Street, Montaza, Alexandria</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p class="my-1"><a href="mailto:vega.2010@yahoo.com">vega.2010@yahoo.com</a></p>
+                <p class="my-1"><a href="mailto:vega.com.eg@gmail.com">vega.com.eg@gmail.com</a></p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p class="my-1"><a href="tel:+201202062000">+20 120 206 2000</a></p>
+                <p class="my-1"><a href="tel:+201067544876">+20 106 754 4876</a></p>
+                <p class="my-1"><a href="tel:035577820">03-557 7820</a></p>
               </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d255.30606498708883!2d30.003360460293774!3d31.26881608201983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5d1e3a28ec88d%3A0x9f2fc3383b7b8de5!2z2KjZitin2YY!5e0!3m2!1sar!2seg!4v1674083531827!5m2!1sar!2seg" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
