email setup & team section & some small changes

--- a/index.html
+++ b/index.html
@@ -102,27 +102,27 @@
         <div class="row" data-aos="zoom-in">
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/1.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/2.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/3.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/4.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/5.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/6.png" class="img-fluid" alt="">
           </div>
 
         </div>
@@ -163,7 +163,7 @@
             </ul>
           </div>
           <div class="col-12 text-center">
-            <a href="assets/previous-work.docx" class="btn-learn-more" download>Previous Work Document <i class="ri-download-2-line"></i></a>
+            <a href="assets/previous-work.pdf" class="btn-learn-more" download>Previous Work Document <i class="ri-download-2-line"></i></a>
           </div>
         </div>
 
@@ -440,75 +440,22 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Team</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Our Leader</h2>
+          <p>We are proud to be led by a highly experienced and dedicated CEO. Our CEO brings a wealth of knowledge and expertise in the field of IT, and has been instrumental in the success of the company.</p>
         </div>
 
         <div class="row">
 
-          <div class="col-lg-6">
+          <div class="col-12">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/mohamed-rafat.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Walter White</h4>
+                <h4>Mohamed Rafat</h4>
                 <span>Chief Executive Officer</span>
-                <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+                <p>Mohamed has been working in the IT industry for over a decade and has a deep understanding of the latest technology trends and developments. He has a proven track record of delivering top-quality products and services to customers, and is committed to providing the best customer experience possible.</p>
                 <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4 mt-lg-0">
-            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-                <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4">
-            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4">
-            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                  <a href="https://www.facebook.com/mohamed.rafat.104"><i class="ri-facebook-fill"></i></a>
+                  <a href="https://www.instagram.com/mohamed2vega"><i class="ri-instagram-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -661,7 +608,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Ahmed Tayser Street, Montaza, Alexandria</p>
+                <p>Basyone Street, Montaza, Alexandria</p>
               </div>
 
               <div class="email">
@@ -678,38 +625,55 @@
                 <p class="my-1"><a href="tel:+201067544876">+20 106 754 4876</a></p>
                 <p class="my-1"><a href="tel:035577820">03-557 7820</a></p>
               </div>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d255.30606498708883!2d30.003360460293774!3d31.26881608201983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5d1e3a28ec88d%3A0x9f2fc3383b7b8de5!2z2KjZitin2YY!5e0!3m2!1sar!2seg!4v1674083531827!5m2!1sar!2seg" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+
+              <div class="phone">
+                <i class="bi bi-facebook"></i>
+                <h4>Social:</h4>
+                <p class="my-1"><a href="https://www.facebook.com/VegaComputer">Vega Computer</a></p>
+                <p class="my-1"><a href="https://www.facebook.com/vegagiftshop">Vega Gift Shop</a></p>
+              </div>
+
+              <iframe <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d368.9588891358225!2d30.00470602593568!3d31.269979869566022!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xaa29bc2bb8bb8d44!2sVega%20Group!5e0!3m2!1sar!2seg!4v1674511838187!5m2!1sar!2seg" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <div class="php-email-form">
+              <div id="mail-success" class="alert alert-success fade show" role="alert">
+                <strong>Horary!</strong> Mail had send successfully, I will contact with you soon.
+              </div>
+              <div id="mail-fail" class="alert alert-warning fade show" role="alert">
+                <strong>Ops!</strong> Some thing went wrong please contact me at <strong><a href="mailto:vega.2010@yahoo.com">vega.2010@yahoo.com</a></strong>
+              </div>
+              <div id="mail-invalid" class="alert alert-warning fade show" role="alert">
+                  <strong>Not Valid!</strong> Please fill up all the fields and valid email address.
+              </div>
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
+                  <input type="text" name="name" class="form-control" id="client-name">
                 </div>
                 <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
+                  <input type="email" class="form-control" name="email" id="client-email">
                 </div>
               </div>
               <div class="form-group">
                 <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
+                <input type="text" class="form-control" name="subject" id="client-subject">
               </div>
               <div class="form-group">
                 <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
+                <textarea class="form-control" name="message" rows="10" id="client-message"></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+              <div class="text-center"><button type="submit" onclick="sendMail()">Send Message</button></div>
+            </div>
           </div>
 
         </div>
@@ -761,6 +725,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
