add product pics

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="#offers">Offers</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -349,12 +349,12 @@
     <!-- End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <section id="offers" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Our company has a proven track record of delivering top-quality products and services to our customers. Our portfolio showcases some of the projects we have completed for our clients, highlighting our expertise in computer hardware and security solutions.
+          <h2>Offers</h2>
+          <p>Our company has a proven track record of delivering top-quality products and services to our customers.</p>
         </div>
         <!-- Filter -->
         <!-- <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
@@ -376,60 +376,26 @@
             </div>
           </div> -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/1.jfif" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/products/19.jpeg" class="img-fluid" alt=""></div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/2.jfif" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/products/20.jpeg" class="img-fluid" alt=""></div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/3.jfif" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/products/21.jpeg" class="img-fluid" alt=""></div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/4.jfif" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/products/22.jpeg" class="img-fluid" alt=""></div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/5.jfif" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/products/23.jpeg" class="img-fluid" alt=""></div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/6.jfif" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/products/24.jpeg" class="img-fluid" alt=""></div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/7.jfif" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/products/25.jpeg" class="img-fluid" alt=""></div>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/8.jfif" class="img-fluid" alt=""></div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/9.jfif" class="img-fluid" alt=""></div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/10.jfif" class="img-fluid" alt=""></div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/11.jfif" class="img-fluid" alt=""></div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/12.jfif" class="img-fluid" alt=""></div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/13.jfif" class="img-fluid" alt=""></div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/14.jfif" class="img-fluid" alt=""></div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/15.jfif" class="img-fluid" alt=""></div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/16.jfif" class="img-fluid" alt=""></div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/17.jfif" class="img-fluid" alt=""></div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/products/18.jfif" class="img-fluid" alt=""></div>
-          </div>
-
         </div>
 
       </div>
